--- a/README
+++ b/README
@@ -1,3 +1,9 @@
 This is a simple blog application using JSF2, Spring3, Spring Security and JPA(Hibernate)
 
+1) i have used mysql username and password as root in the applicationContext.xml under WEB-INF folder for database connection
+2) create a database called blog in mysql and execute the blog-Mysql-script.sql which is there in the Sql Script
+3) mvn clean install
+4) mvn tomcat7:run-war (||||| Important to run with "run-war" for the tomcat plugin ||||||)
+
+
 
